2006-12-19  Bruno Haible  <bruno@clisp.org>

	* autoconf/intparam.c (main): Use 'return', not exit().
	* autoconf/floatparam.c (main): Likewise.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2006-12-11  Richard B. Kreckel  <kreckel@ginac.de>

	Extend the exponent range from 32 bits to 64 bits on selected platforms.
	* include/cln/number.h: Add signatures for operations with long long.
	* include/cln/complex_class.h: Likewise.
	* include/cln/real_class.h: Likewise.
	* include/cln/real.h: Likewise.
	* include/cln/rational_class.h: Likewise.
	* include/cln/rational.h: Likewise.
	* include/cln/integer_class.h: Likewise.
	* include/cln/integer.h: Likewise.
	* include/cln/float.h: Likewise.
	* include/cln/lfloat.h: Likewise.
	* include/cln/types.h (sintE and uintE): New types for exponents.
	* include/cln/*float.h: Use the new types for exponents.
	* include/cln/floatformat.h (float_format_t): Make underlying type
	compatible with sintE.
	* doc/cln.tex: Document changed float_exponent return value.
	* src/float/cl_F.h: Likewise.
	* src/float/ffloat/misc/cl_FF_exponent.cc: Likewise.
	* src/float/input/cl_F_read.cc: Likewise.
	* src/float/lfloat/cl_LF.h: Likewise.
	* src/float/lfloat/cl_LF_impl.h: Likewise.
	* src/float/lfloat/algebraic/cl_LF_sqrt.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_1plus.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_I_div.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_I_mul.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_compare.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_div.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_from_I.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_fround.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_ftrunc.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_futrunc.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_mul.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_scale.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_scale_I.cc: Likewise.
	* src/float/lfloat/elem/cl_LF_square.cc: Likewise.