@@ -1,3 +1,9 @@
+2006-12-24  Bruno Haible  <bruno@clisp.org>
+
+	Make autoconfiguration work with gcc-4.3 snapshots.
+	* autoconf/intparam.c (main1): Rename get_integer_bitsize to
+	get_unsigned_integer_bitsize. New macro get_signed_integer_bitsize.
+
 2006-12-19  Bruno Haible  <bruno@clisp.org>
 
 	* autoconf/intparam.c (main): Use 'return', not exit().
